--- a/content/posts/08-07-2023-ai-ml.md
+++ b/content/posts/08-07-2023-ai-ml.md
@@ -2,6 +2,8 @@
 slug: ai/ml-in-2023-and-Future
 title: "AI/ML in 2023 and Future"
 date: 2023-07-15T21:58:38+05:30
+link: https://www.meetup.com/swechafsmi/events/294163891/
+
 ---
 
 [Register](https://www.meetup.com/swechafsmi/events/294163951/)
