--- a/content/posts/01-07-2023-android.md
+++ b/content/posts/01-07-2023-android.md
@@ -2,6 +2,7 @@
 slug: workshop-on-android-development
 title: "Workshop on Android Development"
 date: 2023-07-01T22:00:48+05:30
+link: https://www.meetup.com/swechafsmi/events/294163891/
 ---
 
 [Register](https://www.meetup.com/swechafsmi/events/294163891/)
