--- a/content/posts/10-05-2023-vue.md
+++ b/content/posts/10-05-2023-vue.md
@@ -1,6 +1,7 @@
 ---
 title: "Workshop: Getting started with Vuejs"
 date: 2023-07-15T22:06:43+05:30
+link: https://www.meetup.com/swechafsmi/events/294163891/
 ---
 
 [Register](https://www.meetup.com/swechafsmi/events/293903347/)
