--- a/content/posts/9.md
+++ b/content/posts/9.md
@@ -3,6 +3,7 @@ slug: women-who-code
 title: "WWCode To the Finish Line: Walk, Run or Roll for Equity | Global Fundraiser"
 date: 2022-09-23T22:00:48+05:30
 link: https://www.meetup.com/women-who-code-hyderabad/events/295683461/
+draft: true
 ---
 
 [Register](https://www.meetup.com/women-who-code-hyderabad/events/295683461/)
