remove repeated event

--- a/content/posts/10.md
+++ b/content/posts/10.md
@@ -3,6 +3,7 @@ slug: Code-Retreat-DevDay-Hyderabad
 title: "Code Retreat - DevDay Hyderabad"
 date: 2022-09-23T22:00:48+05:30
 link: https://www.meetup.com/devday_hyderabad/events/295697583/
+draft: true
 ---
 
 [Register](https://www.meetup.com/devday_hyderabad/events/295697583/)
